kubernetes/components/home-assistant/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
  namespace: home-assistant
  annotations:
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |
      url: "http://home-assistant.home-assistant.svc.cluster.local:8123"
      interval: 60s
      conditions:
        - "[STATUS] == 200"
    item.homer.rajsingh.info/name: "Home Assistant"
    item.homer.rajsingh.info/icon: "fas fa-home"
    service.homer.rajsingh.info/name: "Home"
    service.homer.rajsingh.info/icon: "fas fa-house-signal"
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - "home.${LOCAL_DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: home-assistant
      port: 8123
